# practice-django-celery-redis-20241124-001

./: README.md  pyproject.toml
django/core/: __init__.py  celery.py  settings.py  urls.py
django/myapp/: tasks.py  urls.py  views.py
